--- a/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
+++ b/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.22" />
+    <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
   </ItemGroup>
 
   <ItemGroup>
