--- a/Graffle.FlowSdk.Services/Graffle.FlowSdk.Services.csproj
+++ b/Graffle.FlowSdk.Services/Graffle.FlowSdk.Services.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.20" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Graffle.FlowSdk" Version="0.1.11-prerelease" />
+    <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 </Project>
