--- a/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
+++ b/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.22" />
     <PackageReference Include="coverlet.msbuild" Version="3.1.2"/>
-    <PackageReference Include="Graffle.FlowSdk" Version="0.1.26-prerelease" />
+    <PackageReference Include="Graffle.FlowSdk" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
