--- a/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
+++ b/Graffle.FlowSdk.Services.Tests/Graffle.FlowSdk.Services.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
+    <NoWarn>618</NoWarn>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
