--- a/Graffle.FlowSdk.Services/Graffle.FlowSdk.Services.csproj
+++ b/Graffle.FlowSdk.Services/Graffle.FlowSdk.Services.csproj
@@ -13,7 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.20" />
     <PackageReference Include="Nethereum.RLP" Version="4.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Graffle.FlowSdk" Version="1.0.8" />
+    <PackageReference Include="Graffle.FlowSdk" Version="1.0.9" />
     <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
   </ItemGroup>
 </Project>
